--- a/atividades-online/template/country-flags/src/views/layout.njk
+++ b/atividades-online/template/country-flags/src/views/layout.njk
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <title>{{ title }}</title>
+  <link rel="icon" type="imagem/png"
+    href="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn2.iconfinder.com%2Fdata%2Ficons%2Fe-commerce-4%2F256%2FSelect_Country-512.png&f=1&nofb=1" />
   {% block style %}
   {% endblock %}
 </head>
